--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,27 @@
-@import 'codemirror/lib/codemirror.css';
-@import 'codemirror/theme/material.css';
+@import "codemirror/lib/codemirror.css";
+@import "codemirror/theme/material.css";
 html,
 body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.react-codemirror2 {
+  width: 100%;
+  flex-grow: 1;
+}
+
+.CodeMirror {
+  height: 100%;
 }
